made iframe width and height responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     .container {
       position: relative;
       width: 100%;
-      height: 100%;
       overflow: hidden;
       padding-top: 56.25%;
       /* 16:9 Aspect Ratio */
@@ -28,12 +27,12 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <!-- <div class="container"> -->
     <iframe
       class="responsive-iframe"
       src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ3q4KMOIivcLsT8gQ0QQgKh-3RaB8tM5KnXw6ugswYJ1adZ7epP8cKvOCjP-Qc5NYUcQoqQyZfpHRO/pubhtml?gid=370212902&amp;single=true&amp;widget=true&amp;headers=false">
     </iframe>
-  </div>
+  <!-- </div> -->
 </body>
 </html>
 
